k8s/overlays/development/postgresql.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
spec:
  selector:
    deployment: postgresql
  type: ClusterIP
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:11.2-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: data
