k8s/overlays/development/selenium.yaml
kind: Service
apiVersion: v1
metadata:
  name: selenium-vnc
spec:
  selector:
    deployment: selenium
  type: NodePort
  ports:
    - port: 5900
      nodePort: 32590
---
kind: Service
apiVersion: v1
metadata:
  name: selenium
spec:
  selector:
    deployment: selenium
  type: ClusterIP
  ports:
    - port: 4444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium
spec:
  replicas: 1
  template:
    metadata:
      labels:
        deployment: selenium
    spec:
      containers:
        - name: selenium
          image: selenium/standalone-chrome-debug:3.141.59
          ports:
            - containerPort: 5900
            - containerPort: 4444
