k8s/overlays/development/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /(packs|sockjs-node)
            backend:
              serviceName: webpacker
              servicePort: 80
          - path: /
            backend:
              serviceName: web
              servicePort: 3000
